syntax = "proto3";

package clientstream;

option java_multiple_files = true;
option java_package = "com.example.clientstreaming";
option java_outer_classname = "ClientStreamingProto";

message NumberRequest {
  int32 value = 1;
}

message SummaryResponse {
  int32 sum = 1;
}

service ClientStreamingService {
  rpc SendNumbers (stream NumberRequest) returns (SummaryResponse);
}